@@ -1,5 +1,6 @@
 package training.emailextraction;
 
+import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -7,9 +8,9 @@ import java.util.Locale;
 
 public class Main {
 
-    public static void main(String[] args) throws Exception {
+    public static void main(String[] args) throws IOException {
 
-        String input = Files.readString(Paths.get("sample.txt"), StandardCharsets.UTF_8).toLowerCase(Locale.UK);
+        String input = new String(Files.readAllBytes(Paths.get("sample.txt")), StandardCharsets.UTF_8).toLowerCase(Locale.UK);
 
         System.out.println("Part 1");
         Part1.extractSoftwireEmails(input);
